use List.of() in deleteTopics instead of Collections.singletonList()